--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 # will have compiled files and executables
 debug/
 target/
-# Place for test images and other test artifacts
-test_out/
+# Folder for test images/test artifacts that don't belon in repository
+test_out/*
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
